--- a/todo
+++ b/todo
@@ -1,6 +1,11 @@
-[ ] Footer section to be completed
-[ ] Contact section font-weight distribution
-[ ] Contact section icons
-[ ] Hero arrow-down slight animation up-down
-[ ] Add Language Selector in Header Nav
-[ ] Responsiveness
+[x] Footer section to be completed
+[x] Contact section font-weight distribution
+[x] Contact section icons
+[x] Responsiveness
+[x] "Ko Smo Mi" responsive bug...
+[x] Footer mobile padding
+[x] Favicon i OpenGraph slika za meta tagove
+[x] Meta tagovi
+[x] Add Language Selector in Header Nav
+[x] Mobile menu styles
+[x] English version development
